--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Evil Form</title>
 	<link rel="stylesheet" href="index.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
